# first_tauri_app

./: README.md  activate_pyenv.bat  env.txt  environment.txt  run.bat
pythonlib/.env/: pyvenv.cfg
pythonlib/.env/Scripts/: activate  activate.bat
src/: index.html  main.js  second_page.html  second_page.js  test.html  transparent_page copy 2.js  transparent_page copy.js  transparent_page.html  transparent_page.js  webgpu-script.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/py_scripts/: test_import.py
src-tauri/src/: lib.rs  main.rs  screenCapture.rs  test.rs  utils.rs
src/css/: second_page.css  styles.css  transparent_page.css
