[package]
name = "hansolo-first-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hansolo_first_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] } #增加托盘功能
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-utils = { version = "2.0.2"}

image="0.23"
winapi = { version = "0.3.9", features = ["winuser","libloaderapi","windowsx"] }

winit = "0.30.0"

screenshots="0.8.10"
base64 = "0.21" 
chrono = "0.4"
#调用ort : rust的非官方onnx加载库
# ort = "=2.0.0-rc.7"

# ndarray = "0.16"
# image = "*"
# show-image = { version = "0.14", features = [ "image", "raqote" ] }

#调用python
# [dependencies.pyo3]
# version = "0.22.5"
# features = ["auto-initialize"]



# libloading = "0.7"
# ndarray = "0.15"
# once_cell = "1.17"
# # onnxruntime-sys = { version = "0.0.14"} #
# onnxrt-sys = { git = "https://github.com/furiosa-ai/onnxrt-sys", tag = "0.22.0" }
# thiserror = "1.0"
# tracing = "0.1"
# # Enabled with 'model-fetching' feature
# ureq = { version = "2.1", optional = true }


[package.metadata]
build = "build.rs"
# tauri = { version = "1.5", features = ["shell-open", "system-tray"] }
# tauri-plugin-positioner = {version = "1.0", features = ["system-tray"] }